--- a/konnections-ui/package.json
+++ b/konnections-ui/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^6.6.0",
-    "eslint-plugin-react": "^7.20.0"
+    "eslint-plugin-react": "^7.20.0",
+    "webpack-cli": "^3.3.11"
   }
 }
