--- a/konnections-web/src/main/webapp/WEB-INF/web.xml
+++ b/konnections-web/src/main/webapp/WEB-INF/web.xml
@@ -34,4 +34,8 @@
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
 	</security-constraint>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/index.html</location>
+	</error-page>
 </web-app>  
